--- a/views/parts/model.jade
+++ b/views/parts/model.jade
@@ -3,26 +3,37 @@
     h4(ng-if="new") new {{modelName}}
     form.form.form-horizontal
         .form-group(ng-repeat="attribute in attributes")
-            div(ng-if="!attribute.value")
+            div(ng-if="isAttributeForwarding(attribute)")
                 label.col-sm-3.control-label(for="{{attribute.name}}" ) {{attribute.name}}
                 .col-sm-7
-                    input.form-control(
+                    select.form-control(
                     id="{{attribute.name}}"
                     name="{{attribute.name}}"
-                    type="text"
-                    placeholder="Input {{attribute.name}}"
                     ng-model="model[attribute.name]"
+                    ng-options="item.extension as item.title for item in forarding"
                     )
-            div(ng-if="attribute.value")
-                div(ng-if="attribute.value[0]")
-                    h3 {{attribute.name}}
-                    a.btn.btn-default(ng-click="addRow(attribute.name,attribute.value[0])") add
-                    div.col-sm-12(ng-repeat="row in model[attribute.name]")
-                        div.col-sm-3(ng-repeat="field in getObjectkeys(attribute.value[0])")
-                            input(
-                            ng-model="row[field]"
-                            placeholder="input {{field}}"
-                            )
-                        a.btn.btn-danger(ng-click="delRow(attribute.name,$index)") Del
+            div(ng-if="!isAttributeForwarding(attribute)")
+                div(ng-if="!attribute.value")
+                    label.col-sm-3.control-label(for="{{attribute.name}}" ) {{attribute.name}}
+                    .col-sm-7
+                        input.form-control(
+                        id="{{attribute.name}}"
+                        name="{{attribute.name}}"
+                        type="text"
+                        placeholder="Input {{attribute.name}}"
+                        ng-model="model[attribute.name]"
+                        )
+                div(ng-if="attribute.value")
+                    div(ng-if="attribute.value[0]")
+                        h3 {{attribute.name}}
+                        a.btn.btn-default(ng-click="addRow(attribute.name,attribute.value[0])") add
+                        div.col-sm-12(ng-repeat="row in model[attribute.name]")
+                            div.col-sm-3(ng-repeat="field in getObjectkeys(attribute.value[0])")
+                                input(
+                                ng-model="row[field]"
+                                placeholder="input {{field}}"
+                                )
+                            a.btn.btn-danger(ng-click="delRow(attribute.name,$index)") Del
+
         a.btn.btn-primary.col-sm-offset-3(ng-click="save()") Save
         a.btn.btn-danger(ng-show="!new" ng-click="delete()") delete
