--- a/views/parts/menu.jade
+++ b/views/parts/menu.jade
@@ -2,5 +2,6 @@
     a.list-group-item(ng-repeat="model in models" ui-sref="main.models({modelname:model})" ui-sref-active="active") {{model}}
         i.glyphicon.glyphicon-chevron-right.pull-right
 a.btn.btn-success.col-md-12(ng-click="saveConfig()") Write conf file
+a.btn.btn-danger.col-md-12(ng-click="sipReload()") Sip reload
 a.btn.btn-primary.col-md-12(ui-sref="main.files" ui-sref-active="active") Files
 p {{message}}
