--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,11 @@ html(lang='ru')
         script(src='/bower_components/angular-route/angular-route.min.js')
         script(src='/bower_components/angular-resource/angular-resource.min.js')
         script(src='/bower_components/angular-ui-router/release/angular-ui-router.min.js')
+        script(type='text/javascript', src='bower_components/angular-sanitize/angular-sanitize.min.js')
+        script(type='text/javascript', src='bower_components/tv4/tv4.js')
+        script(type='text/javascript', src='bower_components/objectpath/lib/ObjectPath.js')
+        script(type='text/javascript', src='bower_components/angular-schema-form/dist/schema-form.min.js')
+        script(type='text/javascript', src='bower_components/angular-schema-form/dist/bootstrap-decorator.min.js')
         script(src='/public/js/viola_config.min.js')
     body(ng-app="viola")
         nav.navbar.navbar-inverse
